# garbage_project

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  alembic.ini  backend_state.py  config.py  constants.py  db.py  debug_container.py  debug_features.py  docker-compose.yml  index.html  main.py  model_manager.py  models.py  multimodal_fusion.py  pyproject.toml  requirements.txt  test_can.py  test_model_validation.py  test_real_images.py  train_yolo26.py  train_yolo26_safe.py  verify_integration.py
.github/: PULL_REQUEST_TEMPLATE.md  labeler.yml
alembic/: env.py  script.py.mako
app/: backend_state.py  cascade_classifier.py  config.py  constants.py  database.py  db.py  logging_config.py  main.py  metrics.py  model_config_v2.py  models.py  multimodal_fusion.py  optimal_dual_layer.py
config/: branch-protection.json
data/: achievements.json  app.db  app.db-shm  app.db-wal  confusing_pairs.json  history.json  (+3 more)
garbage_project/: .gitignore  README.md  index.html  main.py  pyproject.toml  requirements.txt  test_api.py
garbage_project/.github/: labeler.yml
garbage_project/data/: history.json
garbage_project/static/: index.html
garbage_project/static/css/: components.css  main.css
garbage_project/static/js/: api.js  app.js  store.js
garbage_project/static/js/components/: camera-btn.js  result-card.js  search-suggest.js  voice-btn.js
garbage_project/static/js/pages/: camera.js  guide.js  history.js  home.js  result.js  search.js
garbage_project/static/js/utils/: search-history.js
garbage_project/项目文档/: 设计架构文档.md  阶段一API接口契约.md  阶段一任务清单.md
(+118 files in other folders)
