[project]
name = "waste-classifier"
version = "1.0.0"
description = "校园生活垃圾智能分类识别系统"
requires-python = ">=3.11"

[tool.black]
line-length = 127
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 127
known_first_party = ["main", "utils"]

[tool.flake8]
max-line-length = 127
ignore = ["E203", "W503"]
per-file-ignores = [
    "__init__.py:F401",
]

[tool.pylint.messages_control]
disable = [
    "C0114",  # missing-module-docstring（已有）
    "C0115",  # missing-class-docstring（已有）
    "R0903",  # too-few-methods
    "R0914",  # too-many-locals
    "W0718",  # broad-exception-caught（顶层容错场景保留）
    "C0103",  # invalid-name（FastAPI全局变量 vision_engine/search_engine）
    "W0603",  # global-statement（FastAPI生命周期必需）
    "C0415",  # import-outside-toplevel（延迟导入优化）
]

[tool.pylint.format]
max-line-length = 127

[tool.pylint.basic]
good-names = ["i", "e", "f", "_", "id"]
